Tidy-up unit test