@@ -54,9 +54,10 @@ import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyMap;
 import static org.mockito.ArgumentMatchers.anyString;
@@ -78,49 +79,37 @@ import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
 
 @Slf4j
 @ExtendWith(MockitoExtension.class)
-public class UpdatePartyDetailsServiceTest {
+class UpdatePartyDetailsServiceTest {
 
-    public static final String BEARER_TOKEN = "Bearer token";
-    @Mock
-    NoticeOfChangePartiesService noticeOfChangePartiesService;
-
-    @Mock
-    ObjectMapper objectMapper;
-
-    @Mock
-    ConfidentialDetailsMapper confidentialDetailsMapper;
-
-    @Mock
-    C100RespondentSolicitorService c100RespondentSolicitorService;
-
-    @Mock
-    DocumentLanguageService documentLanguageService;
-
-    @Mock
-    DocumentGenService documentGenService;
-
-    @Mock
-    PartyLevelCaseFlagsService partyLevelCaseFlagsService;
-
-    @Mock
-    @Qualifier("caseSummaryTab")
-    CaseSummaryTabService caseSummaryTabService;
-
-    @Mock
-    ConfidentialityTabService confidentialityTabService;
-
-    @Mock
-    ConfidentialityC8RefugeService confidentialityC8RefugeService;
+    private static final String BEARER_TOKEN = "Bearer token";
 
     @InjectMocks
     UpdatePartyDetailsService updatePartyDetailsService;
-
+    @Mock
+    NoticeOfChangePartiesService noticeOfChangePartiesService;
+    @Mock
+    ObjectMapper objectMapper;
+    @Mock
+    ConfidentialDetailsMapper confidentialDetailsMapper;
+    @Mock
+    C100RespondentSolicitorService c100RespondentSolicitorService;
+    @Mock
+    DocumentLanguageService documentLanguageService;
+    @Mock
+    DocumentGenService documentGenService;
+    @Mock
+    PartyLevelCaseFlagsService partyLevelCaseFlagsService;
+    @Mock
+    @Qualifier("caseSummaryTab")
+    CaseSummaryTabService caseSummaryTabService;
+    @Mock
+    ConfidentialityTabService confidentialityTabService;
+    @Mock
+    ConfidentialityC8RefugeService confidentialityC8RefugeService;
     @Mock
     ManageOrderService manageOrderService;
-
     @Mock
     C8ArchiveService c8ArchiveService;
-
     @Mock
     CaseNameService caseNameService;
 
@@ -828,8 +817,6 @@ public class UpdatePartyDetailsServiceTest {
                              .build())
             .build();
 
-        Map<String, Object> nocMap = Map.of("some", "stuff");
-
         when(confidentialDetailsMapper.mapConfidentialData(
             Mockito.any(CaseData.class),
             Mockito.anyBoolean()
@@ -887,12 +874,9 @@ public class UpdatePartyDetailsServiceTest {
                              .build())
             .build();
 
-        Map<String, Object> nocMap = Map.of("some", "stuff");
-
         updatePartyDetailsService.updateApplicantRespondentAndChildData(callbackRequest, BEARER_TOKEN);
         assertEquals("test1 test22", caseDataUpdated.get("applicantName"));
         assertEquals("test1 test22", caseDataUpdated.get("respondentName"));
-
     }
 
     @Test
@@ -970,7 +954,6 @@ public class UpdatePartyDetailsServiceTest {
                              .build())
             .build();
 
-        Map<String, Object> nocMap = Map.of("some", "stuff");
         when(confidentialDetailsMapper.mapConfidentialData(
             Mockito.any(CaseData.class),
             Mockito.anyBoolean()
@@ -997,7 +980,6 @@ public class UpdatePartyDetailsServiceTest {
         assertEquals("appl party", applicantsFL401.getPartyLevelFlag().getPartyName());
         assertEquals("resp party", respondentsFL401.getPartyLevelFlag().getPartyName());
     }
-
 
     @Test
     void testCaseFlagApplicantsC100() {
@@ -1107,10 +1089,8 @@ public class UpdatePartyDetailsServiceTest {
         assertNotNull(caseDataUpdated.get("applicants"));
     }
 
-
     @Test
     void testCaseFlagRespondentsC100() {
-
         Map<String, Object> caseDataUpdated = new HashMap<>();
         caseDataUpdated.put("applicantName", "test1 test22");
         caseDataUpdated.put("respondentName", "respondent2 lastname222");
@@ -1153,7 +1133,6 @@ public class UpdatePartyDetailsServiceTest {
         Element<Child> wrappedChildren = Element.<Child>builder().value(child).build();
         List<Element<Child>> listOfChildren = Collections.singletonList(wrappedChildren);
 
-
         CaseData caseData = CaseData.builder()
             .caseTypeOfApplication(PrlAppsConstants.C100_CASE_TYPE)
             .respondents(respondentList)
@@ -1187,14 +1166,12 @@ public class UpdatePartyDetailsServiceTest {
                              .build())
             .caseDetailsBefore(CaseDetails.builder().id(123L).data(stringObjectMap).build())
             .build();
-        DocumentLanguage documentLanguage = DocumentLanguage.builder().isGenEng(true).isGenWelsh(true).build();
         updatePartyDetailsService.updateApplicantRespondentAndChildData(callbackRequest, BEARER_TOKEN);
         assertNotNull("respondents");
     }
 
     @Test
-    void testC8GenerateForRespondentsC100() throws Exception {
-
+    void testC8GenerateForRespondentsC100() {
         Map<String, Object> caseDataUpdated = new HashMap<>();
         caseDataUpdated.put("applicantName", "test1 test22");
         caseDataUpdated.put("respondentName", "respondent2 lastname222");
@@ -1275,7 +1252,6 @@ public class UpdatePartyDetailsServiceTest {
 
     @Test
     void testC8GenerateForSixRespondentsC100() throws Exception {
-
         Map<String, Object> caseDataUpdated = new HashMap<>();
         caseDataUpdated.put("applicantName", "test1 test22");
         caseDataUpdated.put("respondentName", "respondent2 lastname222");
@@ -1473,7 +1449,6 @@ public class UpdatePartyDetailsServiceTest {
         assertNotNull("respondents");
     }
 
-
     @Test
     void testCheckIfConfidentialityDetailsChangedRespondentWhenRespondentsDoNotExist() {
         // given
@@ -1496,7 +1471,7 @@ public class UpdatePartyDetailsServiceTest {
         );
 
         // then
-        assertEquals(false, bool);
+        assertFalse(bool);
     }
 
     @Test
@@ -1512,15 +1487,6 @@ public class UpdatePartyDetailsServiceTest {
             .caseTypeOfApplication("FL401")
             .respondentsFL401(respondentBefore)
             .build();
-        Map<String, Object> objectMap = new HashMap<>();
-        CallbackRequest callbackRequest = CallbackRequest.builder()
-            .caseDetailsBefore(CaseDetails
-                                   .builder()
-                                   .state(State.CASE_ISSUED.getValue())
-                                   .data(objectMap)
-                                   .build())
-            .build();
-        Map<String, Object> stringObjectMap = callbackRequest.getCaseDetailsBefore().getData();
         PartyDetails respondent = PartyDetails.builder()
             .email("test1")
             .address(Address.builder()
@@ -1533,7 +1499,7 @@ public class UpdatePartyDetailsServiceTest {
             caseDataBefore,
             wrappedRespondent
         );
-        assertEquals(true, bool);
+        assertTrue(bool);
     }
 
     @Test
@@ -1545,15 +1511,6 @@ public class UpdatePartyDetailsServiceTest {
             .caseTypeOfApplication("FL401")
             .respondentsFL401(respondentBefore)
             .build();
-        Map<String, Object> objectMap = new HashMap<>();
-        CallbackRequest callbackRequest = CallbackRequest.builder()
-            .caseDetailsBefore(CaseDetails
-                                   .builder()
-                                   .state(State.CASE_ISSUED.getValue())
-                                   .data(objectMap)
-                                   .build())
-            .build();
-        Map<String, Object> stringObjectMap = callbackRequest.getCaseDetailsBefore().getData();
         PartyDetails respondent = PartyDetails.builder()
             .email("test1")
             .build();
@@ -1562,7 +1519,7 @@ public class UpdatePartyDetailsServiceTest {
             caseDataBefore,
             wrappedRespondent
         );
-        assertEquals(true, bool);
+        assertTrue(bool);
     }
 
     @Test
@@ -1576,15 +1533,6 @@ public class UpdatePartyDetailsServiceTest {
             .caseTypeOfApplication("FL401")
             .respondentsFL401(respondentBefore)
             .build();
-        Map<String, Object> objectMap = new HashMap<>();
-        CallbackRequest callbackRequest = CallbackRequest.builder()
-            .caseDetailsBefore(CaseDetails
-                                   .builder()
-                                   .state(State.CASE_ISSUED.getValue())
-                                   .data(objectMap)
-                                   .build())
-            .build();
-        Map<String, Object> stringObjectMap = callbackRequest.getCaseDetailsBefore().getData();
         PartyDetails respondent = PartyDetails.builder()
             .address(Address.builder()
                          .addressLine1("test1")
@@ -1595,7 +1543,7 @@ public class UpdatePartyDetailsServiceTest {
             caseDataBefore,
             wrappedRespondent
         );
-        assertEquals(true, bool);
+        assertTrue(bool);
     }
 
     @Test
@@ -1607,15 +1555,6 @@ public class UpdatePartyDetailsServiceTest {
             .caseTypeOfApplication("FL401")
             .respondentsFL401(respondentBefore)
             .build();
-        Map<String, Object> objectMap = new HashMap<>();
-        CallbackRequest callbackRequest = CallbackRequest.builder()
-            .caseDetailsBefore(CaseDetails
-                                   .builder()
-                                   .state(State.CASE_ISSUED.getValue())
-                                   .data(objectMap)
-                                   .build())
-            .build();
-        Map<String, Object> stringObjectMap = callbackRequest.getCaseDetailsBefore().getData();
         PartyDetails respondent = PartyDetails.builder()
             .phoneNumber("012345")
             .build();
@@ -1624,7 +1563,7 @@ public class UpdatePartyDetailsServiceTest {
             caseDataBefore,
             wrappedRespondent
         );
-        assertEquals(true, bool);
+        assertTrue(bool);
     }
 
     @Test
@@ -1635,15 +1574,6 @@ public class UpdatePartyDetailsServiceTest {
             .caseTypeOfApplication("FL401")
             .respondentsFL401(respondentBefore)
             .build();
-        Map<String, Object> objectMap = new HashMap<>();
-        CallbackRequest callbackRequest = CallbackRequest.builder()
-            .caseDetailsBefore(CaseDetails
-                                   .builder()
-                                   .state(State.CASE_ISSUED.getValue())
-                                   .data(objectMap)
-                                   .build())
-            .build();
-        Map<String, Object> stringObjectMap = callbackRequest.getCaseDetailsBefore().getData();
         PartyDetails respondent = PartyDetails.builder()
             .build();
         Element<PartyDetails> wrappedRespondent = Element.<PartyDetails>builder().value(respondent).build();
@@ -1651,7 +1581,7 @@ public class UpdatePartyDetailsServiceTest {
             caseDataBefore,
             wrappedRespondent
         );
-        assertEquals(false, bool);
+        assertFalse(bool);
     }
 
     @Test
@@ -1671,15 +1601,6 @@ public class UpdatePartyDetailsServiceTest {
             .caseTypeOfApplication("C100")
             .respondents(listOfRespondents)
             .build();
-        Map<String, Object> objectMap = new HashMap<>();
-        CallbackRequest callbackRequest = CallbackRequest.builder()
-            .caseDetailsBefore(CaseDetails
-                                   .builder()
-                                   .state(State.CASE_ISSUED.getValue())
-                                   .data(objectMap)
-                                   .build())
-            .build();
-        Map<String, Object> stringObjectMap = callbackRequest.getCaseDetailsBefore().getData();
         respondentBefore = respondentBefore.toBuilder()
             .email("test1")
             .address(Address.builder()
@@ -1692,7 +1613,7 @@ public class UpdatePartyDetailsServiceTest {
             caseDataBefore,
             wrappedRespondent
         );
-        assertEquals(true, bool);
+        assertTrue(bool);
     }
 
     @Test
@@ -1708,15 +1629,6 @@ public class UpdatePartyDetailsServiceTest {
             .caseTypeOfApplication("C100")
             .respondents(listOfRespondents)
             .build();
-        Map<String, Object> objectMap = new HashMap<>();
-        CallbackRequest callbackRequest = CallbackRequest.builder()
-            .caseDetailsBefore(CaseDetails
-                                   .builder()
-                                   .state(State.CASE_ISSUED.getValue())
-                                   .data(objectMap)
-                                   .build())
-            .build();
-        Map<String, Object> stringObjectMap = callbackRequest.getCaseDetailsBefore().getData();
         respondentBefore = respondentBefore.toBuilder()
             .email("test1")
             .build();
@@ -1725,7 +1637,7 @@ public class UpdatePartyDetailsServiceTest {
             caseDataBefore,
             wrappedRespondent
         );
-        assertEquals(true, bool);
+        assertTrue(bool);
     }
 
     @Test
@@ -1743,15 +1655,6 @@ public class UpdatePartyDetailsServiceTest {
             .caseTypeOfApplication("C100")
             .respondents(listOfRespondents)
             .build();
-        Map<String, Object> objectMap = new HashMap<>();
-        CallbackRequest callbackRequest = CallbackRequest.builder()
-            .caseDetailsBefore(CaseDetails
-                                   .builder()
-                                   .state(State.CASE_ISSUED.getValue())
-                                   .data(objectMap)
-                                   .build())
-            .build();
-        Map<String, Object> stringObjectMap = callbackRequest.getCaseDetailsBefore().getData();
         respondentBefore = respondentBefore.toBuilder()
             .address(Address.builder()
                          .addressLine1("test1")
@@ -1762,7 +1665,7 @@ public class UpdatePartyDetailsServiceTest {
             caseDataBefore,
             wrappedRespondent
         );
-        assertEquals(true, bool);
+        assertTrue(bool);
     }
 
     @Test
@@ -1778,15 +1681,6 @@ public class UpdatePartyDetailsServiceTest {
             .caseTypeOfApplication("C100")
             .respondents(listOfRespondents)
             .build();
-        Map<String, Object> objectMap = new HashMap<>();
-        CallbackRequest callbackRequest = CallbackRequest.builder()
-            .caseDetailsBefore(CaseDetails
-                                   .builder()
-                                   .state(State.CASE_ISSUED.getValue())
-                                   .data(objectMap)
-                                   .build())
-            .build();
-        Map<String, Object> stringObjectMap = callbackRequest.getCaseDetailsBefore().getData();
         respondentBefore = respondentBefore.toBuilder()
             .phoneNumber("012345")
             .build();
@@ -1795,7 +1689,7 @@ public class UpdatePartyDetailsServiceTest {
             caseDataBefore,
             wrappedRespondent
         );
-        assertEquals(true, bool);
+        assertTrue(bool);
     }
 
     @Test
@@ -1811,20 +1705,11 @@ public class UpdatePartyDetailsServiceTest {
             .caseTypeOfApplication("C100")
             .respondents(listOfRespondents)
             .build();
-        Map<String, Object> objectMap = new HashMap<>();
-        CallbackRequest callbackRequest = CallbackRequest.builder()
-            .caseDetailsBefore(CaseDetails
-                                   .builder()
-                                   .state(State.CASE_ISSUED.getValue())
-                                   .data(objectMap)
-                                   .build())
-            .build();
-        Map<String, Object> stringObjectMap = callbackRequest.getCaseDetailsBefore().getData();
         boolean bool = updatePartyDetailsService.checkIfConfidentialityDetailsChangedRespondent(
             caseDataBefore,
             wrappedRespondentBefore
         );
-        assertEquals(false, bool);
+        assertFalse(bool);
     }
 
     @Test
@@ -1852,10 +1737,8 @@ public class UpdatePartyDetailsServiceTest {
         assertNotNull(updatedCaseData);
     }
 
-
     @Test
     void testAmendOtherPeopleInTheCase() {
-        CaseData caseData = CaseData.builder().build();
         Map<String, Object> objectMap = new HashMap<>();
         objectMap.put("caseTypeOfApplication", "C100");
         CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(CaseDetails.builder()
@@ -1927,8 +1810,6 @@ public class UpdatePartyDetailsServiceTest {
 
     @Test
     void testSetApplicantDefaultApplicant() {
-
-
         PartyDetails respondent1 = PartyDetails.builder()
             .firstName("respondent1")
             .lastName("lastname1")
@@ -1958,7 +1839,6 @@ public class UpdatePartyDetailsServiceTest {
         Map<String, Object> updatedCaseData = updatePartyDetailsService.setDefaultEmptyApplicantForC100(caseData);
         assertNotNull(updatedCaseData.get("applicants"));
     }
-
 
     @Test
     void testSetApplicantDefaultApplicant_scenario2() {
@@ -1994,8 +1874,6 @@ public class UpdatePartyDetailsServiceTest {
 
     @Test
     void testSetRespondentsDefaultApplicant() {
-
-
         PartyDetails respondent1 = PartyDetails.builder()
             .firstName("respondent1")
             .lastName("lastname1")
@@ -2106,7 +1984,7 @@ public class UpdatePartyDetailsServiceTest {
         Map<String, Object> updatedCaseData = updatePartyDetailsService.setDefaultEmptyChildDetails(caseData);
         List<Element<Child>> updatedChildDetails = (List<Element<Child>>) updatedCaseData.get("children");
         assertEquals(1, updatedChildDetails.size());
-        assertEquals(Child.builder().build(), updatedChildDetails.get(0).getValue());
+        assertEquals(Child.builder().build(), updatedChildDetails.getFirst().getValue());
     }
 
     @Test
@@ -2193,7 +2071,6 @@ public class UpdatePartyDetailsServiceTest {
             "newChildDetails");
         assertEquals(1, updatedChildDetails.size());
     }
-
 
     @Test
     void testUpdateOtherPeopleInTheCaseConfidentialityData() {
@@ -2282,7 +2159,6 @@ public class UpdatePartyDetailsServiceTest {
         Map<String, Object> updatedCaseData = updatePartyDetailsService.updateOtherPeopleInTheCaseConfidentialityData(
             callbackRequest);
         assertNotNull(updatedCaseData);
-
     }
 
     @Test
@@ -2507,7 +2383,6 @@ public class UpdatePartyDetailsServiceTest {
             .respondents(List.of(respondent))
             .build();
 
-
         Map<String,Object> caseDataMapBefore = new HashMap<>();
         Map<String,Object> caseDataMap = new HashMap<>();
         caseDataMapBefore.put("before", true);
@@ -2538,7 +2413,6 @@ public class UpdatePartyDetailsServiceTest {
         List<String> validationErrorList = updatePartyDetailsService.validateUpdatePartyDetails(callbackRequest);
 
         assertTrue(validationErrorList.isEmpty());
-
     }
 
     @Test
@@ -2560,7 +2434,6 @@ public class UpdatePartyDetailsServiceTest {
             .respondents(List.of(respondent))
             .build();
 
-
         Map<String,Object> caseDataMapBefore = new HashMap<>();
         Map<String,Object> caseDataMap = new HashMap<>();
         caseDataMapBefore.put("before", true);
@@ -2591,7 +2464,6 @@ public class UpdatePartyDetailsServiceTest {
         List<String> validationErrorList = updatePartyDetailsService.validateUpdatePartyDetails(callbackRequest);
 
         assertTrue(validationErrorList.isEmpty());
-
     }
 
     @Test
@@ -2643,9 +2515,7 @@ public class UpdatePartyDetailsServiceTest {
 
         List<String> validationErrorList = updatePartyDetailsService.validateUpdatePartyDetails(callbackRequest);
 
-        assertTrue(!validationErrorList.isEmpty());
         assertTrue(validationErrorList.getFirst().contains("Barrister is associated with the party"));
-
     }
 
     @Test
@@ -2737,9 +2607,7 @@ public class UpdatePartyDetailsServiceTest {
 
         List<String> validationErrorList = updatePartyDetailsService.validateUpdatePartyDetails(callbackRequest);
 
-        assertTrue(!validationErrorList.isEmpty());
         assertTrue(validationErrorList.getFirst().contains("Barrister is associated with the party"));
-
     }
 
     @Test
@@ -2789,12 +2657,9 @@ public class UpdatePartyDetailsServiceTest {
                 return null;
             });
 
-
         List<String> validationErrorList = updatePartyDetailsService.validateUpdatePartyDetails(callbackRequest);
 
-        assertTrue(!validationErrorList.isEmpty());
         assertTrue(validationErrorList.getFirst().contains("Barrister is associated with the party"));
-
     }
 
     @Test
@@ -2826,7 +2691,6 @@ public class UpdatePartyDetailsServiceTest {
         List<String> validationErrorList = updatePartyDetailsService.validateUpdatePartyDetails(callbackRequest);
 
         assertTrue(validationErrorList.isEmpty());
-
     }
 
     private Element<PartyDetails> getPartyDetails(String partyName, boolean hasBarrister) {
@@ -2842,5 +2706,4 @@ public class UpdatePartyDetailsServiceTest {
                        .firstName(partyName).build())
             .build();
     }
-
 }
